Fix jumping scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 html {
   box-sizing: border-box;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 body {
